--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  lottie: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -23,8 +24,8 @@ dev_dependencies:
 flutter:
 
   # To add assets to your package, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/star.json
   #   - images/a_dot_ham.jpeg
   #
   # For details regarding assets in packages, see
