--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
   flutter:
     sdk: flutter
   lottie: ^3.0.0
+  package_info_plus: ^8.0.0
+  url_launcher: ^6.2.6
 
 dev_dependencies:
   flutter_test:
